# cempy

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  cempy-tutorial.ipynb  examples.ipynb  lelonde.csv  setup.cfg  setup.py  tox.ini
.ipynb_checkpoints/: cempy-tutorial-checkpoint.ipynb  examples-checkpoint.ipynb
cempy/: CEM.py  README.md  __init__.py  cli.py  setup.py
cempy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cempy/cempy.egg-info/: PKG-INFO  SOURCES.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: cemR.Rmd  cemR.html  cempy-tutorial.ipynb
examples/.ipynb_checkpoints/: cempy-tutorial-checkpoint.ipynb
tests/: __init__.py  test_cem.py
