[metadata]
name = cempy
version = 0.0.1
author = Enayetur Raheem
author_mail = eraheem@dataskool.com
description = Coarsened Exact Matching (CEM) with Python
long_description = file: README.md
long_description_concent_type = text/markdown
url = https://github.com/raheems/cempy
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Aproved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.7
include_pckage_data = True